<resources>
    <string name="app_name">Maréu</string>
    <string name="add_meeting">Add new meeting</string>
    <string name="delete_meeting">Delete meeting</string>

    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="room">Room</string>
    <string name="subject">Subject</string>
    <string name="time">Time</string>
    <string name="participants">Participants</string>
    <string name="save">Save</string>
    <string name="new_reunion">New meeting</string>
    <string name="slash">/</string>


    <string name="java" >Java</string>


    <string-array name="room">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Dart</item>
        <item>Python</item>
        <item>Android</item>
        <item>Swift</item>
        <item>Teams</item>
        <item>OS</item>
        <item>Itunes</item>
        <item>Studio</item>
    </string-array>

</resources>